force-app/main/default/objects/WD_Scholarship_Recipient__c/WD_Scholarship_Recipient__c.object-meta.xml
<CustomObject>
    <label>Workday Scholarship Recipient</label>
    <nameField>
        <displayFormat>WSR-{00000000}</displayFormat>
        <label>WD Scholarship Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workday Scholarship Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>