force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/FIRST_NAME__c.field-meta.xml
<CustomField>
    <fullName>FIRST_NAME__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>