force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/FUND_ACCT__c.field-meta.xml
<CustomField>
    <fullName>FUND_ACCT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Workday Scholarship Recipients</relationshipLabel>
    <relationshipName>Workday_Scholarship_Recipients_Fund</relationshipName>
    <type>Lookup</type>
</CustomField>