force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/HOME_CITY__c.field-meta.xml
<CustomField>
    <fullName>HOME_CITY__c</fullName>
    <label>Home City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>