force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/HOME_ST__c.field-meta.xml
<CustomField>
    <fullName>HOME_ST__c</fullName>
    <label>Home State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>