force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/LAST_NAME__c.field-meta.xml
<CustomField>
    <fullName>LAST_NAME__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>