force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/RCPNT_CLSFN__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_CLSFN__c</fullName>
    <label>Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>