force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/RCPNT_COLL__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_COLL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>College</label>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Workday Scholarship Recipients</relationshipLabel>
    <relationshipName>Workday_Scholarship_Recipients_College</relationshipName>
    <type>Lookup</type>
</CustomField>