force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/RCPNT_DEPT_CD__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_DEPT_CD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>ucinn_ascendv2__Academic_Organization__c</referenceTo>
    <relationshipLabel>Workday Scholarship Recipients (Department)</relationshipLabel>
    <relationshipName>Workday_Scholarship_Recipients_Dept</relationshipName>
    <type>Lookup</type>
</CustomField>