force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/RCPNT_ID__c.field-meta.xml
<CustomField>
    <fullName>RCPNT_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Workday Scholarship Recipients</relationshipLabel>
    <relationshipName>Workday_Scholarship_Recipients_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>