force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/SCHL_ADDR_1__c.field-meta.xml
<CustomField>
    <fullName>SCHL_ADDR_1__c</fullName>
    <label>School Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>