force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/SCHL_CITY__c.field-meta.xml
<CustomField>
    <fullName>SCHL_CITY__c</fullName>
    <label>School City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>