force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/SCHL_ST__c.field-meta.xml
<CustomField>
    <fullName>SCHL_ST__c</fullName>
    <label>School State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>