force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/SCHL_ZIP__c.field-meta.xml
<CustomField>
    <fullName>SCHL_ZIP__c</fullName>
    <label>School Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>