force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/SCHLRSHP_SEM_CD__c.field-meta.xml
<CustomField>
    <fullName>SCHLRSHP_SEM_CD__c</fullName>
    <label>Scholarship Semester Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>