force-app/main/default/objects/WD_Scholarship_Recipient__c/fields/UNIQUE_AWARD_ID__c.field-meta.xml
<CustomField>
    <fullName>UNIQUE_AWARD_ID__c</fullName>
    <label>Unique Award Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>